feat(preview) : 미리보기 페이지 수정